<resources>
    <string name="app_name">TestTcp</string>
    <string name="server_ip">Server ip:</string>
    <string name="port1">Port 1</string>
    <string name="port2">Port 2</string>
    <string name="ip_mask">xxx.xxx.xxx.xxx</string>
    <string name="start">Start</string>
    <string name="port1Desc">Port 1:</string>
    <string name="port2Desc">Port 2:</string>
    <string name="packetSize">Packet Size (bytes):</string>
    <string name="msgCount">Nr of packets</string>
</resources>
